Added sections header, hero and meals

--- a/index.html
+++ b/index.html
@@ -18,7 +18,190 @@
         new WOW().init();
     </script>
 </head>
+
 <body>
-    
+
+
+    <!------------    header -------------->
+    <header class="header">
+        <div class="container">
+            <div class="row">
+                <div class="col-2">
+                    <div class="logo">
+                        <img src="img/logo_mini.jpg" alt="Logo_mini">
+                    </div>
+                </div>
+                <div class="col-7">
+                    <div class="nav">
+                        <ul class="nav-list d-flex align-items-center">
+                            <li class="nav-list__item">
+                                <a class="nav-list__link" href="#">
+                                    HOME
+                                </a>
+                            </li>
+                            <li class="nav-list__item">
+                                <a class="nav-list__link" href="#">
+                                    Recipes
+                                </a>
+                            </li>
+                            <li class="nav-list__item">
+                                <a class="nav-list__link" href="#">
+                                    Photo Galleries
+                                </a>
+                            </li>
+                            <li class="nav-list__item">
+                                <a class="nav-list__link" href="#">
+                                    Videos
+                                </a>
+                            </li>
+                            <li class="nav-list__item">
+                                <a class="nav-list__link" href="#">
+                                    All Categories
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-3">
+                    <div class="search">
+                        <form action="">
+                            <i class="fa fa-search" aria-hidden="true"></i>
+                            <input type="text" class="input" placeholder="Find a recipe">
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+        </div>
+    </header>
+
+    <!------------   / header -------------->
+
+    <!------------    hero -------------->
+
+    <section class="hero">
+        <div class="container">
+            <div class="row">
+                <div class="col">
+                    <div class="hero-info d-flex">
+                        <div class="hero-info__logo">
+                            <img src="img/logo_big.jpg" alt="">
+                        </div>
+                        <div class="hero-info__title">
+                            Bananas Foster Ice Cream Cake
+                        </div>
+                        <div class="hero-info__text">
+                            If you're looking for decadence, look no further — you've found the Holy Grail of desserts.
+                            Honestly, this cake makes us wonder why Bananas Foster hasn't always been served on top of
+                            ice
+                            cream cake.
+                        </div>
+                        <div class="hero-info__link">
+                            <a class="hero-info__link-btn" href="#">GET IT RECIPE</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+
+    <!------------  / hero -------------->
+
+
+
+    <!------------   meals -------------->
+
+    <div class="meals">
+        <div class="container">
+            <div class="row">
+                <div class="meals-list d-flex">
+                    <div class="col-4">
+                        <div class="meals-list__item">
+                            <div class="meals-list__item-photo">
+                                <img src="img/meals_1.png" alt="">
+                            </div>
+                            <div class="meals-list__item-name">
+                                Raspberry & Cream Frozen Yogurt Pie
+                            </div>
+                            <div class="meals-list__item-statistics">
+                                <div class="posted">
+                                    <i class="fa fa-clock-o"></i>
+                                    <p>35mins</p>
+                                </div>
+                                <div class="comments">
+                                    <i class="fa fa-comment"></i>
+                                    <p>7</p>
+                                </div>
+                                <div class="previews">
+                                    <i class="fa fa-eye"></i>
+                                    <p>14</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-4">
+                        <div class="meals-list__item">
+                            <div class="meals-list__item-photo">
+                                <img src="img/meals_2.png" alt="">
+                            </div>
+                            <div class="meals-list__item-name">
+                                Giant Ice Cream Sandwich
+                            </div>
+                            <div class="meals-list__item-statistics">
+                                <div class="posted">
+                                    <i class="fa fa-clock-o"></i>
+                                    <p>20mins</p>
+                                </div>
+                                <div class="comments">
+                                    <i class="fa fa-comment"></i>
+                                    <p>4</p>
+                                </div>
+                                <div class="previews">
+                                    <i class="fa fa-eye"></i>
+                                    <p>356</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-4">
+                        <div class="meals-list__item">
+                            <div class="meals-list__item-photo">
+                                <img src="img/meals_3.png" alt="">
+                            </div>
+                            <div class="meals-list__item-name">
+                                Dark Chocolate Crunch Ice Cream
+                                Sandwich Cake
+                            </div>
+                            <div class="meals-list__item-statistics">
+                                <div class="posted">
+                                    <i class="fa fa-clock-o"></i>
+                                    <p>15mins</p>
+                                </div>
+                                <div class="comments">
+                                    <i class="fa fa-comment"></i>
+                                    <p>4</p>
+                                </div>
+                                <div class="previews">
+                                    <i class="fa fa-eye"></i>
+                                    <p>167</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+    <!------------  / meals -------------->
+
+
+    <script src="js/jquery.min.js"></script>
+    <script src="js/bootstrap.bundle.min.js"></script>
+    <script src="js/jquery.easie-min.js"></script>
+    <script src="js/main.js"></script>
 </body>
+
 </html>
