--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                         <img src="img/logo_dark.png" alt="Logo_mini">
                     </div>
                 </div>
-                <div class="col-4">
+                <div class="col-lg-4">
                     <nav>
                         <div class="nav">
                             <button><a href="#">Home</a></button>
@@ -63,14 +63,7 @@
                         </div>
                     </nav>
                 </div>
-                <div class="col-lg-3 col-2">
-                    <div class="search">
-                        <form>
-                            <input placeholder="Find a recipe" type="search">
-                        </form>
-                    </div>
-                </div>
-                <div class="col-3">
+                <div class="col-lg-3 col-6">
                     <nav class="cd-main-nav js-main-nav">
                         <ul class="cd-main-nav__list js-signin-modal-trigger">
                             <!-- inser more links here -->
@@ -203,6 +196,13 @@
                         </div> <!-- cd-signin-modal__container -->
                     </div> <!-- cd-signin-modal -->
                 
+                </div>
+                <div class="col-lg-1 col-2">
+                    <div class="search">
+                        <form>
+                            <input placeholder="Find a recipe" type="search">
+                        </form>
+                    </div>
                 </div>
             </div>
         </div>
