Changed names and color sidebar items (header)

--- a/index.html
+++ b/index.html
@@ -73,23 +73,21 @@
                     <nav id="sidebar-wrapper">
                         <ul class="sidebar-nav">
                             <li class="sidebar-nav-item">
-                                <a class="js-scroll-trigger" href="#">Login</a>
+                                <a class="js-scroll-trigger" href="#">Home</a>
                             </li>
                             <li class="sidebar-nav-item">
-                                <a class="js-scroll-trigger" href="#">Register</a>
+                                <a class="js-scroll-trigger" href="#">Recipes</a>
                             </li>
                             <li class="sidebar-nav-item">
-                                <a class="js-scroll-trigger" href="#page-top">Home</a>
+                                <a class="js-scroll-trigger" href="#">Photo Galleries</a>
                             </li>
                             <li class="sidebar-nav-item">
-                                <a class="js-scroll-trigger" href="#destination">Destination</a>
+                                <a class="js-scroll-trigger" href="#">Videos</a>
                             </li>
                             <li class="sidebar-nav-item">
-                                <a class="js-scroll-trigger" href="#about"> About</a>
+                                <a class="js-scroll-trigger" href="#">All Categories</a>
                             </li>
-                            <li class="sidebar-nav-item">
-                                <a class="js-scroll-trigger" href="#partner">Partner</a>
-                            </li>
+
                         </ul>
                     </nav>
                 </div>
