--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@
                 <div class="col-10">
                     <nav>
                         <div class="nav">
-                            <button><a href="#">Home</a></button>
+                            <button class="animate__animated animate__fadeInUp wow" data-wow-delay="0.5s"><a href="#">Home</a></button>
                             <div class="nav-recipes">
-                                <button>Recipes</button>
+                                <button class="animate__animated animate__fadeInUp wow" data-wow-delay="0.7s">Recipes</button>
                                 <ul>
                                     <li><a href="#">RECOMMENDED</a></li>
                                     <li><a href="#">POPULAR</a></li>
@@ -60,9 +60,9 @@
                                     <li><a href="#">NEWEST</a></li>
                                 </ul>
                             </div>
-                            <button><a href="#">Photo Galleries</a></button>
-                            <button><a href="#">Videos</a></button>
-                            <button><a href="#">All Categories</a></button>
+                            <button class="animate__animated animate__fadeInUp wow" data-wow-delay="0.9s"><a href="#">Photo Galleries</a></button>
+                            <button class="animate__animated animate__fadeInUp wow" data-wow-delay="1.1s"><a href="#">Videos</a></button>
+                            <button class="animate__animated animate__fadeInUp wow" data-wow-delay="1.2s"><a href="#">All Categories</a></button>
                         </div>
                     </nav>
                 </div>
@@ -96,16 +96,16 @@
                 <div class="col-12">
                     <div class="header-bottom">
                         <div class="search">
-                            <form>
+                            <form class="animate__animated animate__fadeInLeft wow" data-wow-delay="1s">
                                 <input placeholder="Find a recipe" type="search">
                             </form>
                         </div>
                         <nav class="cd-main-nav js-main-nav">
                             <ul class="cd-main-nav__list js-signin-modal-trigger">
                                 <!-- inser more links here -->
-                                <li><a class="cd-main-nav__item cd-main-nav__item--signin" href="#0"
+                                <li><a class="cd-main-nav__item cd-main-nav__item--signin animate__animated animate__fadeInRight wow" data-wow-delay="0.5s" href="#0"
                                         data-signin="login">Sign in</a></li>
-                                <li><a class="cd-main-nav__item cd-main-nav__item--signup" href="#0"
+                                <li><a class="cd-main-nav__item cd-main-nav__item--signup animate__animated animate__fadeInRight wow" data-wow-delay="0.8s" href="#0"
                                         data-signin="signup">Sign up</a></li>
                             </ul>
                         </nav>
@@ -254,19 +254,19 @@
             <div class="row hero-wrap">
                 <div class="col-10">
                     <div class="hero-info d-flex">
-                        <div class="hero-info__logo">
+                        <div class="hero-info__logo animate__animated animate__fadeInLeft wow" data-wow-delay="0.5s">
                             <img src="img/logo_big.jpg" alt="">
                         </div>
-                        <div class="hero-info__title">
+                        <div class="hero-info__title animate__animated animate__fadeInLeft wow" data-wow-delay="0.7s">
                             Bananas Foster Ice Cream Cake
                         </div>
-                        <div class="hero-info__text">
+                        <div class="hero-info__text animate__animated animate__fadeInLeft wow" data-wow-delay="0.9s">
                             If you're looking for decadence, look no further — you've found the Holy Grail of desserts.
                             Honestly, this cake makes us wonder why Bananas Foster hasn't always been served on top of
                             ice
                             cream cake.
                         </div>
-                        <div class="hero-info__link">
+                        <div class="hero-info__link animate__animated animate__fadeInUp wow" data-wow-delay="1s">
                             <a class="hero-info__link-btn" href="#">GET IT RECIPE</a>
                         </div>
                     </div>
@@ -288,13 +288,13 @@
                 <div class="col-12">
                     <div class="meals-wrap">
                         <div class="meals__item">
-                            <div class="meals__item-photo">
+                            <div class="meals__item-photo animate__animated animate__bounceInDown wow" data-wow-delay="0.5s">
                                 <img src="img/meals_1.png" alt="">
                             </div>
-                            <div class="meals__item-name">
+                            <div class="meals__item-name animate__animated animate__fadeInDown wow" data-wow-delay="0.6s">
                                 Raspberry & Cream Frozen Yogurt Pie
                             </div>
-                            <div class="meals__item-statistics">
+                            <div class="meals__item-statistics animate__animated animate__fadeInLeft wow" data-wow-delay="0.8">
                                 <div class="posted">
                                     <i class="fa fa-clock-o"></i>
                                     <p>35mins</p>
@@ -310,13 +310,13 @@
                             </div>
                         </div>
                         <div class="meals__item">
-                            <div class="meals__item-photo">
+                            <div class="meals__item-photo animate__animated animate__bounceInDown wow" data-wow-delay="0.7s">
                                 <img src="img/meals_2.png" alt="">
                             </div>
-                            <div class="meals__item-name">
+                            <div class="meals__item-name  animate__animated animate__fadeInDown wow" data-wow-delay="0.8s">
                                 Giant Ice Cream Sandwich
                             </div>
-                            <div class="meals__item-statistics">
+                            <div class="meals__item-statistics animate__animated animate__fadeInLeft wow" data-wow-delay="1s">
                                 <div class="posted">
                                     <i class="fa fa-clock-o"></i>
                                     <p>20mins</p>
@@ -332,14 +332,14 @@
                             </div>
                         </div>
                         <div class="meals__item">
-                            <div class="meals__item-photo">
+                            <div class="meals__item-photo animate__animated animate__bounceInDown wow" data-wow-delay="0.9s">
                                 <img src="img/meals_3.png" alt="">
                             </div>
-                            <div class="meals__item-name">
+                            <div class="meals__item-name  animate__animated animate__fadeInDown wow" data-wow-delay="1s">
                                 Dark Chocolate Crunch Ice Cream
                                 Sandwich Cake
                             </div>
-                            <div class="meals__item-statistics">
+                            <div class="meals__item-statistics animate__animated animate__fadeInLeft wow" data-wow-delay="1.1s">
                                 <div class="posted">
                                     <i class="fa fa-clock-o"></i>
                                     <p>15mins</p>
@@ -371,13 +371,13 @@
         <div class="container">
             <div class="row">
                 <div class="col-3">
-                    <div class="logo">
+                    <div class="logo animate__animated animate__fadeInLeft wow" data-wow-delay="0.5">
                         <img src="img/logo_white.png" alt="Logo_mini">
                     </div>
                 </div>
                 <div class="col-9">
                     <nav>
-                        <div class="nav">
+                        <div class="nav animate__animated animate__fadeInRight wow" data-wow-delay="0.7">
                             <button><a class="nav-home" href="#">Home</a></button>
                             <div class="nav-recipes">
                                 <button>Recipes</button>
@@ -397,15 +397,15 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-12 footer-bottom">
+                <div class="col-12 footer-bottom animate__animated animate__fadeInDown wow" data-wow-delay="1s">
                     <div class="rights">
                         <i class="fa fa-copyright">2016-2017 LEMON. All right reserved</i>
                     </div>
                     <div class="social d-flex">
-                        <a href="#"><i class="fa fa-google-plus"></i></a>
-                        <a href="#"><i class="fa fa-twitter"></i></a>
-                        <a href="#"><i class="fa fa-facebook"></i></a>
-                        <a href="#"><i class="fa fa-pinterest"></i>
+                        <a class="animate__animated animate__fadeInUp wow" data-wow-delay="1s" href="#"><i class="fa fa-google-plus"></i></a>
+                        <a class="animate__animated animate__fadeInUp wow" data-wow-delay="1.2s" href="#"><i class="fa fa-twitter"></i></a>
+                        <a class="animate__animated animate__fadeInUp wow" data-wow-delay="1.3s" href="#"><i class="fa fa-facebook"></i></a>
+                        <a class="animate__animated animate__fadeInUp wow" data-wow-delay="1.5s" href="#"><i class="fa fa-pinterest"></i>
                     </div>
                 </div>
             </div>
@@ -417,7 +417,7 @@
      <!------------  / footer -------------->
 
 
-     
+
     <script src="js/jquery.min.js"></script>
     <script src="js/bootstrap.bundle.min.js"></script>
     <script src="js/jquery.easie-min.js"></script>
